fix dark mode border color

--- a/style-blog.css
+++ b/style-blog.css
@@ -36,6 +36,10 @@ pre, blockquote {
   padding: 10px;
 }
 
+@media (prefers-color-scheme: dark) {
+  border-color: white;
+}
+
 code {
   font-family: 'Fira Mono', monospace;
   font-size: 12px;
